--- a/README.rdoc
+++ b/README.rdoc
@@ -37,10 +37,10 @@ It also has a `Procfile` which you probably won't need to touch.
 
 ## TODO
 
-### Goal-tracking stuff
+### Next
 - Setup Cucumber and Capybara and write some tests
-- Browse goals by due-date quarter
 - Make an "about" page explaining the thing and that its a pre-alpha proof of concept
+- Browse goals by due-date quarter
 - Fix the header so the proposition links don't disappear on mobile
 - Start using the GOV.UK components instead of reinventing the wheel
 - Ween ourselves off of bootstrap and just use the standard GOV.UK CSS.
@@ -55,6 +55,8 @@ It also has a `Procfile` which you probably won't need to touch.
 - Filter to show vacant roles per Function (by month)
 - Split allocation into separate table away from roles Stop using "hard-coded" months :(
 
-== DONE
+## DONE
+- Add Group & Team goals pages & links
+- Add GOV.UK page layout template
 - Paginate full role listing
 - Associate roles to functions (initially by function_name) w/ error reporting
